tests/NormalTests/paczka1/fuzzy1/65591560.err
Error in line 2: YGasEW A561 72,3
Error in line 5: An2oXZ9I4gM S232 -1,3
Error in line 23: rZ2LmGfiV S487 34,8
Error in line 29: rZ2LmGfiV S232 83,6
Error in line 27: An2oXZ9I4gM S232 239,3
Error in line 32: An2oXZ9I4gM S487 25,1
Error in line 28: YGasEW S232 130,3
Error in line 39: Ca93TD S232 14,7
